interface InterestRate {
    double calculateInterestRate(BankAccount bankAccount);
}

